# dj_books

./: .gitignore  README.md  commands.sh  dj_books.epj  fast_restart.sh  fixtures_update.sh  manage.py  migrate_from_olddatabase.py  myinstall.sh  passwd  pyproject.toml  settings_file.py
books/: __init__.py  admin.py  context_processors.py  forms.py  models.py  table_easy.py  tables.py  views.py
books/migrations/: 0001_initial.py  0002_auto_20180203_1031.py  0003_profile.py  0005_auto_20180605_1942.py  0006_profile_email_confirmed.py  0009_author_gender.py  0010_auto_20200806_0606.py  0011_auto_20200807_0729.py  0012_auto_20200807_0805.py  0013_auto_20200807_0836.py  0014_mine_20200807_0859_permissions_to_groups.py  0015_mine_20200807_0901_permissions_to_groups.py  0016_auto_20200809_1013.py  0017_remove_profile_language.py  0018_auto_20200820_1804.py  0019_mine_20200821_0421_good_permissions.py
books/reusing/: casts.py  myconfigparser.py
dj_books/: admin.py  commands.sh  forms.py  migrate_from_olddatabase.py  myinstall.sh  passwd  settings.py  urls.py  views.py
doc/: Doxyfile  administrator.dox  index.dox  permissions.md
fixtures/: users.json
static/: mystyles.css
templates/: 403.html  account_activation_invalid.html  account_activation_sent.html  account_activation_valid.html  base.html  base_chartjs.html  change_password.html  database.html  home.html  login.html  most_valuated_books.html  profile.html  signup.html  statistics.html  statistics_global.html  statistics_user.html  times.html  unfinished_books.html  valoration.html  valoration_list.html
(+89 files in other folders)
