[tool.poetry]
name = "dj-books"
version = "0.1.0"
description = ""
authors = ["turulomio <turulomio@yahoo.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
django = ">=5.0.0"
psycopg = ">=3.1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
