[tool.poetry]
name = "dj-books"
version = "0.1.0"
description = ""
authors = ["turulomio <turulomio@yahoo.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
django = ">=5.1.4"
psycopg = ">=3.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
