[project]
name = "dj-books"
version = "0.1.0"
description = ""
authors = [
    {name = "turulomio", email = "turulomio@yahoo.es"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6",
    "psycopg>=3.2.1",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
